--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "gatsby": "^2.17.6",
+    "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-plugin-postcss": "^2.1.14",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
