--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "dependencies": {
     "classnames": "^2.2.6",
     "gatsby": "^2.17.6",
     "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-postcss": "^2.1.14",
+    "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "tailwindcss": "^1.1.3"
