--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "gatsby": "^2.17.6",
     "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-postcss": "^2.1.14",
+    "gatsby-plugin-react-helmet": "^3.1.14",
     "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-helmet": "^5.2.1",
     "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
