--- a/hugo.toml
+++ b/hugo.toml
@@ -25,12 +25,12 @@ style = "github-dark"
   favicon_32 = "/img/favicon-32x32.png"
   favicon_16 = "/img/favicon-16x16.png"
 
-  since = 2019
+  since = 2025
 
   enableTwemoji = true
 
   colorScheme = "auto"
-  hidecolorschemetoggle = false
+  hidecolorschemetoggle = true
 
   # customCSS = ["css/custom.css"]
   # customSCSS = ["scss/custom.scss"]
@@ -48,11 +48,11 @@ style = "github-dark"
   icon = "fa-brands fa-github fa-2x"
   weight = 1
   url = "https://github.com/gizotti/"
-[[params.social]]
-  name = "Linkedin"
-  icon = "fa-brands fa-linkedin fa-2x"
-  weight = 2
-  url = "https://linkedin.com/p/gizotti/"
+# [[params.social]]
+#   name = "Linkedin"
+#   icon = "fa-brands fa-linkedin fa-2x"
+#   weight = 2
+#   url = "https://linkedin.com/p/gizotti/"
 # [[params.social]]
 #   name = "Twitter"
 #   icon = "fa-brands fa-x-twitter fa-2x"
