setup github actions workflow

--- a/hugo.toml
+++ b/hugo.toml
@@ -48,11 +48,11 @@ style = "github-dark"
   icon = "fa-brands fa-github fa-2x"
   weight = 1
   url = "https://github.com/gizotti/"
-# [[params.social]]
-#   name = "Linkedin"
-#   icon = "fa-brands fa-linkedin fa-2x"
-#   weight = 2
-#   url = "https://linkedin.com/p/gizotti/"
+[[params.social]]
+  name = "Linkedin"
+  icon = "fa-brands fa-linkedin fa-2x"
+  weight = 2
+  url = "https://linkedin.com/p/gizotti/"
 # [[params.social]]
 #   name = "Twitter"
 #   icon = "fa-brands fa-x-twitter fa-2x"
@@ -70,3 +70,6 @@ style = "github-dark"
   url = "about/"
   height = 30
 
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
