--- a/hugo.toml
+++ b/hugo.toml
@@ -52,7 +52,7 @@ style = "github-dark"
   name = "Linkedin"
   icon = "fa-brands fa-linkedin fa-2x"
   weight = 2
-  url = "https://linkedin.com/p/gizotti/"
+  url = "https://www.linkedin.com/in/gabriel-gizotti/"
 # [[params.social]]
 #   name = "Twitter"
 #   icon = "fa-brands fa-x-twitter fa-2x"
