--- a/hugo.toml
+++ b/hugo.toml
@@ -60,15 +60,15 @@ style = "github-dark"
 #   url = "https://twitter.com/johndoe/"
 
 # Menu links
-[[menu.main]]
-  name = "Blog"
-  weight = 1
-  url  = "posts/"
-[[menu.main]]
-  name = "About"
-  weight = 2
-  url = "about/"
-  height = 30
+# [[menu.main]]
+#   name = "Blog"
+#   weight = 1
+#   url  = "posts/"
+# [[menu.main]]
+#   name = "About"
+#   weight = 2
+#   url = "about/"
+#   height = 30
 
 [caches]
   [caches.images]
