Change Engineer to Developer

--- a/hugo.toml
+++ b/hugo.toml
@@ -15,7 +15,7 @@ style = "github-dark"
 
 [params]
   author = "Gabriel Gizotti"
-  info = "Software Engineer"
+  info = "Software Develper"
   description = "Gabriel Gizotti's personal website"
   keywords = "blog,developer,personal"
   # avatarurl = "images/avatar.jpg"
