--- a/hugo.toml
+++ b/hugo.toml
@@ -53,11 +53,11 @@ style = "github-dark"
 #   name = "Blog"
 #   weight = 1
 #   url  = "posts/"
-# [[menu.main]]
-#   name = "About"
-#   weight = 2
-#   url = "about/"
-#   height = 30
+[[menu.main]]
+  name = "About"
+  weight = 2
+  url = "about/"
+  height = 30
 
 [caches]
   [caches.images]
